--- a/app/assets/stylesheets/admin/spree_suppliers.css.scss
+++ b/app/assets/stylesheets/admin/spree_suppliers.css.scss
@@ -48,3 +48,16 @@
 table tbody tr.ad_hoc td {
   background-color: rgb(252, 220, 196);
 }
+
+@media print {
+
+  table {
+      border:solid #000 !important;
+      border-width:1px 0 0 1px !important;
+  }
+  th, td {
+      border:solid #000 !important;
+      border-width:0 1px 1px 0 !important;
+  }
+
+}
