--- a/app/views/spree/admin/reports/suppliers_orders.html.haml
+++ b/app/views/spree/admin/reports/suppliers_orders.html.haml
@@ -98,4 +98,4 @@
                   %td.quantity= qty
           - reset_cycle
 
-        = render "form_add_and_report", supplier: supplier
+        = render "form_add_and_report", supplier: supplier if supplier
