--- a/app/views/spree/admin/reports/suppliers_orders.html.haml
+++ b/app/views/spree/admin/reports/suppliers_orders.html.haml
@@ -35,10 +35,15 @@
             = f.text_field :completed_at_lt, :class => 'datepicker datepicker-to', :value => params[:q][:completed_at_lt], :placeholder => t(:stop)
 
       %div.four.columns
-        .field
+        .field 
           = label_tag nil, t(:order_number)
           = text_field_tag "q[order_number_gt]", @starting_order.try(:number)
 
+      %div.four.columns
+        %br
+        %br
+        %p 
+          Med datumi ALI od št. naročila naprej
       .clear
       .form-buttons.actions.filter-actions
         = button t(:search), 'icon-search'
@@ -90,12 +95,52 @@
                 %th Količina
             %tbody
               - product_pairs.each_pair do |pid, qty|
-                - product = Spree::Product.find(pid)
-                %tr{:class => "#{cycle('odd', 'even')}#{ product.ad_hoc_option_types.empty? ? '' : ' ad_hoc' }"}
-                  %td= (product.name || ''  + ' (' + product.packaging || '' + ') ' )
-                  %td= product.brand || '' + + " " + product.promo + " " + product.comment
-                  %td= product.sku || ''
-                  %td.quantity= qty
+                - variant = Spree::Variant.find_by_id(pid)
+                - if variant
+                  - product = variant.product
+                  %tr{:class => "#{cycle('odd', 'even')}#{ product.ad_hoc_option_types.empty? ? '' : ' ad_hoc' }"}
+                    %td= (product.name || '')  + ' (' + (product.packaging || '') + ')'
+                    %td=raw  (product.brand || '') + " <br><small><b>" + (product.promo || '') + " " + (product.comment || '') + "</b></small>"
+                    %td= product.sku || ''
+                    %td.quantity= qty
           - reset_cycle
 
         = render "form_add_and_report", supplier: supplier if supplier
+
+%div{style: 'margin-top: 100px'}
+
+  %h2 Naročila (samo za preverjanje)
+  %p
+    Seznam vseh narocenih izdelkov, ki ustrezajo kriterijem.
+
+  - if @orders.any?
+    %table.index
+      %colgroup
+        %col{:style => "width: 10%;"}
+        %col{:style => "width: 10%;"}
+        %col{:style => "width: 10%;"}
+        %col{:style => ""}
+        %col{:style => "width: 10%;"}
+        %col{:style => "width: 10%;"}
+      %thead
+        %tr
+          %th= t(:completed_at)
+          %th= sort_link @search, :number, t(:number, :scope => 'activerecord.attributes.spree/order')
+          %th= t(:status)
+          %th= t(:product)
+          %th= t(:supplier)
+
+      %tbody
+      - @orders.each do |order|
+        - order.products.each do |product|
+          %tr{:class => "state-#{order.state.downcase} #{cycle('odd', 'even')}"}
+            %td= order.try(:completed_at)
+            %td= link_to order.number, admin_order_path(order)
+            %td.align-center
+              %span{:class => "state #{order.state.downcase}"}= t("order_state.#{order.state.downcase}")
+            %td.align-center
+              = product.try(:name)
+            %td.align-center
+              = product.supplier.try(:name)
+            %td.actions.align-center{"data-hook" => "admin_orders_index_row_actions"}
+              = link_to_edit_url edit_admin_order_path(order), :title => "admin_edit_#{dom_id(order)}", :no_text => true
